# applied-data-science

./: .gitignore  README.md
final-project/contrastive-learning/: .gitignore  README.md  examples.py  main.py  pyproject.toml  requirements.txt  verify_setup.py
final-project/contrastive-learning/configs/: cifar10_r100.yaml  creditcard.yaml
final-project/contrastive-learning/data/: README.md
final-project/contrastive-learning/src/: __init__.py
final-project/contrastive-learning/src/cli/: run_all.sh  train_cifar10lt.sh  train_creditcard.sh
final-project/contrastive-learning/src/data/: dataset.py  imbalance.py  transforms.py
final-project/contrastive-learning/src/evaluation/: evaluator.py  metrics.py  visualize.py
final-project/contrastive-learning/src/models/: base.py  classifier.py  encoder.py
final-project/contrastive-learning/src/pipeline/: run_contrastive.py
final-project/contrastive-learning/src/training/: losses.py  train_classifier.py  train_contrastive.py
final-project/contrastive-learning/src/utils/: config.py  logger.py  seed.py
final-project/diffusion-based/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
final-project/diffusion-based/configs/: classifier.yaml  diffusion.yaml
final-project/diffusion-based/docs/: dataset.md  experiments.md  methods.md  overview.md  usage.md
final-project/diffusion-based/src/: __init__.py
final-project/diffusion-based/src/cli/: evaluate.sh  run_baseline.sh  run_diffusion.sh
final-project/diffusion-based/src/data/: dataset.py  imbalance.py  transforms.py
final-project/diffusion-based/src/evaluation/: evaluator.py  metrics.py  visualize.py
final-project/diffusion-based/src/models/: __init__.py  base.py  classifier.py  diffusion.py  scheduler.py  unet.py
final-project/diffusion-based/src/pipeline/: __init__.py  run_baseline.py  run_diffusion_pipeline.py  sampling.py
final-project/diffusion-based/src/training/: losses.py  train_classifier.py  train_diffusion.py
final-project/diffusion-based/src/utils/: config.py  logger.py  seed.py
final-project/gan-vae-based/: .gitignore  README.md  brain-storming.txt  pyproject.toml  requirements.txt
final-project/gan-vae-based/configs/: classifier.yaml  default.yaml  gan.yaml  vae.yaml
final-project/gan-vae-based/docs/: dataset.md  experiments.md  methods.md  overview.md  usage.md
final-project/gan-vae-based/gan/: config.yaml
final-project/gan-vae-based/src/cli/: dataset.py  run_baseline.py  run_baseline.sh  run_gan.py  run_gan.sh  run_vae.sh
final-project/gan-vae-based/src/data/: __init__.py  dataset.py  imbalance.py  transforms.py
final-project/gan-vae-based/src/evaluation/: evaluator.py  metrics.py  visualize.py
final-project/gan-vae-based/src/gan-vae-based/: knowledge.md
final-project/gan-vae-based/src/models/: base.py  classifier.py  gan.py
final-project/gan-vae-based/src/pipeline/: __init__.py  run_baseline.py  run_gan_pipeline.py  run_vae_pipeline.py
final-project/gan-vae-based/src/training/: __init__.py  train_classifier.py  train_gan.py  train_vae.py
final-project/gan-vae-based/src/utils/: __init__.py  config.py  logger.py  seed.py
final-project/representation-learning/: .gitignore  DATASET_SETUP.md  FILES_MANIFEST.md  PIPELINE_SUMMARY.md  QUICK_REFERENCE.txt  README.md  SETUP.md  START_HERE.txt  docs.md  pyproject.toml  requirements.txt
final-project/representation-learning/configs/: cifar10_config.yaml  credit_card_fraud_config.yaml
final-project/representation-learning/docs/: 00-DOCUMENTATION-MAP.md  COMPARISON_INDEX.md  COMPARISON_PIPELINE.md  COMPARISON_QUICKSTART.md  COMPLETION_REPORT.md  DATASET_SETUP.md  INDEX.md  SETUP.md  VISUALIZATION_GUIDE.md  VISUALIZATION_IMPLEMENTATION.md  VISUALIZATION_INDEX.md  VISUALIZATION_PIPELINE.md  VISUALIZATION_REFERENCE.txt
final-project/representation-learning/notebooks/: comparison_pipeline.ipynb
final-project/representation-learning/results/: imbalance_impact_analysis.csv  overall_metrics.csv  per_class_performance.csv  training_results.txt
final-project/representation-learning/scripts/: download_fraud_dataset.sh  quick_setup.sh  setup_datasets.sh  test_visualization.sh  visualize_datasets.sh  visualize_quick.sh
final-project/representation-learning/src/: __init__.py  main.py  requirements.txt
final-project/representation-learning/src/configs/: config.yaml
final-project/representation-learning/src/data/: __init__.py  cifar.py
final-project/representation-learning/src/engine/: __init__.py  evaluator.py  trainer.py
final-project/representation-learning/src/m2m/: __init__.py  synthesis.py
final-project/representation-learning/src/models/: __init__.py  cifar10_models.py  fraud_models.py  resnet.py
final-project/representation-learning/src/preprocessing/: __init__.py  (+3 more)
(+75 files in other folders)
