[project]
name = "imbalanced-learning"
version = "1.0.0"
description = "GAN and VAE-based oversampling for CIFAR-10-LT imbalance learning"
authors = [
    {name = "tuong.nguyen", email = "richardnguyen0715@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "torchvision>=0.15.0,<1.0.0",
    "datasets>=4.8.4,<5.0.0",
    "pyyaml>=6.0,<7.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "Pillow>=9.4.0,<11.0.0",
    "huggingface-hub>=0.16.0,<1.0.0",
    "filelock>=3.12.0,<4.0.0",
]

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode=false