[project]
name = "representation-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "tuong.nguyen",email = "richardnguyen0715@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
