[project]
name = "representation-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "tuong.nguyen",email = "richardnguyen0715@gmail.com"}
]
requires-python = ">=3.11,<3.14.1 || >3.14.1,<3.15"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "kagglehub (>=1.0.0,<2.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipython (>=9.13.0,<10.0.0)",
    "tqdm (>=4.67.3,<5.0.0)",
    "imbalanced-learn (>=0.14.1,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
